
	Special Thanks To:
		* Greek for his contributions to aMule's user interface.

--------------------------------------------------------------------------------

Version 2.2.4 - The "don't know yet if there will be another 2.2" version.
----------
2009-??

	GonoszTopi:
		* Fix compilation of Format.cpp for some platforms

	Stu Redman:
		* Fix crash on global search on Windows

	Wuischke:
		* Add Asturian language

--------------------------------------------------------------------------------

Version 2.2.3 - The "Late Christmas present" version.
----------
2008-12-28

	Alfred:
		* Fixes to compile with Sun Studio 12.

	Gerd78:
		* Fix for linking with a static bfd library.

	GonoszTopi:
		* Fixed improper handling of EC connection failures.
		* Fix for shells not properly handling empty lists.
		* POSIX fixes in shell code.
		* Made not finding GeoIP non-fatal.
		* Check if --enable-geoip-static can be fulfilled.
		* Fixed loading of zipped ipfilter files. Thanks to CtrlAltDel
		  for the investigation of the problem.
		* Fixed alc progress bar for files >4GB.
		* Fixed #1056: amulegui: incorrect results when searching with
		  min size >= 4GB
		* Disable automatic sorting of dowload list while there is a
		  pop-up menu or file detail dialog displayed.
		* MinGW compilation fix.
		* Fixed GTK crash on closing search tabs. Thanks to btkaos.

	LittleAbacus:
		* Support multiple selections on CSearchListCtrl::OnMarkAsKnown().

	Skolnick:
		* Fix alc and alcc to work with files bigger than 4GB

	Stu Redman:
		* Fix crash when last category was removed with a completed file in it
		* Fix wrong ordering/placing of clients in the download window
		* Fix available fileparts display for large files
		* Don't open server UDP socked if ED2K is disabled
		* Reordered preferences, disabled ED2K/UPnP prefs if ED2K/UPnP is disabled
		* MSVC: solution for MSVC 2008 Express edition, 
		  project for ed2k and fileview
		* Fix wrong file download rates in transfer window